Bug fixing IE11 navigation hover, alignement of pods

--- a/app/assets/sass/_sendiass-header.scss
+++ b/app/assets/sass/_sendiass-header.scss
@@ -128,6 +128,7 @@ nav.global-navigation {
                 font-family: $font-secondary;
                 color: #ffffff;
                 display: inline-block;
+                text-decoration: none;
                 &:visited {
                     color: #ffffff;
                 }
