--- a/app/assets/sass/_sendiass-images.scss
+++ b/app/assets/sass/_sendiass-images.scss
@@ -1,4 +1,5 @@
 .img-curved {
     border-radius: 33px;
     box-shadow: 10px 10px 15px #CACACA;
+    width: 100%;
 }
