--- a/app/assets/sass/_sendiass-promo-two-cols.scss
+++ b/app/assets/sass/_sendiass-promo-two-cols.scss
@@ -18,13 +18,26 @@
         }
     }
     .promo-two-col-content {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -ms-flex-line-pack: start;
         align-content: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
     }
     .btn {
-        width: fit-content;
+        width: -webkit-max-content;
+        width: -moz-max-content;
+        width: max-content;
     }
     @media (min-width: 768px) {
         .btn {
